GNOME Bugzilla – Bug 764210
Strange Background Color on Emacs
Last modified: 2016-03-26 19:21:50 UTC
Created attachment 324771 [details] Strangle blue background color Upgrading from 3.18 to 3.19/3.20, gtk displays emacs as having a strange blue background color. This is an issue regardless of my emacs init file.
git bisect points at 70d689cddda0dc616af97e8ed047d0c0acf7c7a6 is the first bad commit commit 70d689cddda0dc616af97e8ed047d0c0acf7c7a6 Author: Paolo Borelli <pborelli@gnome.org> Date: Sat Feb 27 11:43:18 2016 +0100 gdk: calculate pixel color shift and precision lazily This gets rid of the decompose_mask utility entirely and simplifies backend code.
This is marked as fixed but I'm still seeing it with gtk 3.20 on Arch (on X and wayland)
It's fixed in master: https://git.gnome.org/browse/gtk+/commit/?id=8206b824fa3cba5cbc7ddec0a1ccec7828f37dc5 Please, try a GTK build with that commit.
(In reply to Emmanuele Bassi (:ebassi) from comment #3) > It's fixed in master: > > https://git.gnome.org/browse/gtk+/commit/ > ?id=8206b824fa3cba5cbc7ddec0a1ccec7828f37dc5 > > Please, try a GTK build with that commit. Thanks Emmanuele, I've built a package from master and it's fine. Having the commit id in bugzilla makes it much easier to check which version the fix is in.